--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@apollo/client": "^3.12.4",
     "axios": "^1.6.7",
+    "firebase": "^11.1.0",
     "graphql": "^16.10.0",
     "graphql-request": "^7.1.2",
     "react": "^18.2.0",
